# mistral.rs

./: .auto-claude.yml  .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_INTEGRATION_ANALYSIS.md  AGENT_MODE_IMPLEMENTATION.md  AGENT_TOOLS_COMPLETE.md  AGENT_TOOLS_INTEGRATION.md  AGENT_TOOLS_SESSION_SUMMARY.md  AUTO_CLAUDE_SETUP.md  BINARY_CHECK_RESULTS.json  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  COMPILATION_FIXES_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  CONTEXT_SUMMARY.md  COVERAGE_FIX_STATUS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_VALIDATED.md  DEPLOYMENT_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.manylinux  FEATURE_STABILIZATION.md  FINAL_SESSION_SUMMARY.md  FIXME_TRACKING.md  GIT_AUTOMATION_COMPLETE.md  GIT_WORKFLOW_FIXES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUMMARY.md  MAKEFILE_TARGETS_SUMMARY.md  MEMORY_OPTIMIZATION_STRATEGY.md  (+51 more)
mistralrs/: Cargo.toml  README.md
mistralrs-agent-tools/: AGENT_TOOLS_GUIDE.md  Cargo.toml  EXECUTION_SUMMARY.md  FULL_INTEGRATION_PLAN.md  FULL_INTEGRATION_SUMMARY.md  INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL.md  PHASE1_PROGRESS.md  PHASE1_STATUS.md  PHASE2.1_IMPLEMENTATION.md  PHASE2.2_IMPLEMENTATION.md  PHASE2_3_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_INTEGRATION_ASSESSMENT.md  PHASE2_SUMMARY.md  QUICK_REFERENCE.md  SECURITY.md  TODO_STATUS.md  WINUTILS_ARCHITECTURE.md  WINUTILS_COMPLETE.md  WINUTILS_INTEGRATION.md
mistralrs-agent-tools/src/: catalog.rs  core_integration.rs  lib.rs  mcp_server.rs  pathlib.rs  test_utils.rs
mistralrs-agent-tools/src/tools/: mod.rs  sandbox.rs
mistralrs-agent-tools/src/types/: mod.rs  security.rs
mistralrs-agent-tools/tests/: tool_registry_integration.rs
mistralrs-agent-tools/tests/fixtures/: README.md
mistralrs-agent-tools/winutils/: APPLY_OPTIMIZATIONS.sh  ARCHITECTURE_REVIEW_SUMMARY.md  BUILD_ARCHITECTURE.md  BUILD_CONFIGURATION.md  BUILD_DOCUMENTATION.md  BUILD_OPTIMIZATION.md  BUILD_OPTIMIZATION_REPORT.md  CARGO_CONFIG_README.md  CARGO_CONFIG_SUMMARY.md  CLAUDE.md  CLAUDE_ANALYSIS_REPORT.md  CLAUDE_PROPOSED.md  CODE_REVIEW_REPORT.md  CRITICAL_EVALUATION_REPORT.md  Cargo.toml  DEDUPLICATION_REPORT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENHANCED_FEATURES_SUMMARY.md  FINAL_REPORT.md  FINAL_VALIDATION_REPORT.md  FIXES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  Makefile  Makefile.coverage  Makefile.coverage.new  Makefile.toml  OPTIMIZATION_FINDINGS.txt  OPTIMIZATION_SUMMARY.md  OPTIMIZED_BUILD_SYSTEM_PLAN.md  PERFORMANCE.md  PERFORMANCE_FRAMEWORK_README.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE2_CONTEXT.md  PHASE2_CONTEXT_SUMMARY.md  PHASE2_FINAL_CONTEXT.md  PROJECT_STATUS.md  QUICKSTART.md  (+34 more)
mistralrs-agent-tools/winutils/.claude/: CLAUDE.md
mistralrs-agent-tools/winutils/.config/: nextest.toml
mistralrs-agent-tools/winutils/benches/: README.md  path_normalization.rs  utility_benchmarks.rs
mistralrs-agent-tools/winutils/benchmarks/: Cargo.toml  README.md
mistralrs-agent-tools/winutils/coreutils/: Cargo.toml  README.md
mistralrs-agent-tools/winutils/deploy/: WinUtils-Deployment-Framework.ps1  WinUtils-Manager.ps1
mistralrs-agent-tools/winutils/derive-utils/: Cargo.toml  GIT_BASH_TESTS_README.md  Makefile  README.md  SHELL_WRAPPERS_IMPLEMENTATION.md  build.rs  test_all_git_bash_paths.sh
mistralrs-agent-tools/winutils/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  PERFORMANCE.md  README.md
mistralrs-agent-tools/winutils/examples/: enhanced_utility_demo.rs
mistralrs-agent-tools/winutils/generator/: Cargo.toml
mistralrs-agent-tools/winutils/scripts/: INSTALLATION_DEPLOYMENT_SUMMARY.md  benchmark-vs-gnu.ps1  deploy.ps1  generate-sbom.ps1  install-git-hooks.sh  optimize-workspace-phase1.ps1  pre-commit-hook.sh  run-pgo-workload.ps1  setup-sccache.ps1  setup-sccache.sh  test-gnu-compat.ps1  validate.ps1  validate.sh  validate_paths.py  verify-gitbash-integration.sh
mistralrs-agent-tools/winutils/test-results/: winpath-validation-20250923-131113.txt
mistralrs-agent-tools/winutils/tests/: executable_path_tests.rs
mistralrs-agent-tools/winutils/where/: Cargo.toml
mistralrs-core/: Cargo.toml
mistralrs-core/src/: distributed.rs  feature_detection.rs  lib.rs  model_selected.rs  request.rs  sampler.rs  sequence.rs
mistralrs-mcp/: Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  README.md  TESTING_SUMMARY.md
mistralrs-mcp/benches/: performance.rs  performance_optimized.rs
mistralrs-mcp/examples/: config.rs  rag_redis_smoke.rs
mistralrs-mcp/src/: capabilities.rs  client.rs  client_optimized.rs  connection_pool.rs.disabled  lib.rs  rag_integration.rs.disabled  reliability.rs  resource_monitor.rs  runtime.rs  shutdown.rs  transport.rs
mistralrs-mcp/tests/: README.md  client_tests.rs  integration_tests.rs  mock_server.rs  rag_redis_smoke.rs  transport_tests.rs
mistralrs-paged-attn/: Cargo.toml  README.md
mistralrs-pyo3/: API.md  Cargo.toml  README.md  _README.md  generate_wheels.sh
mistralrs-pyo3-tools/: Cargo.toml
mistralrs-pyo3-tools/src/: lib.rs
mistralrs-pyo3/src/: lib.rs
mistralrs-server/: Cargo.toml
mistralrs-server/src/: agent_mode.rs  interactive_mode.rs  main.rs  mcp_server.rs  tool_registry.rs
mistralrs-tui/: Cargo.toml  README.md  REVIEW.md
mistralrs-tui/migrations/: 0001_init.sql  0002_agent_tools.sql
mistralrs-tui/src/: app.rs  config.rs  input.rs  inventory.rs  lib.rs  main.rs  session.rs  ui.rs
mistralrs-tui/src/agent/: ui.rs  (+6 more)
mistralrs-tui/tests/: cli.rs  ui_snapshot.rs
mistralrs-web-chat/: Cargo.toml  README.md
mistralrs-web-chat/static/: index.html  styles.css
mistralrs/src/: anymoe.rs  gguf.rs  gguf_lora_model.rs  gguf_xlora_model.rs  lib.rs  lora_model.rs  messages.rs  model.rs  react_agent.rs  speculative.rs  text_model.rs  vision_model.rs  xlora_model.rs
(+737 files in other folders)
