[package]
name = "mistralrs-agent-tools"
version = "0.6.0"
edition.workspace = true
description = "Sandboxed filesystem operations for mistral.rs agent mode"
license.workspace = true
homepage.workspace = true
keywords = ["llm", "inference", "filesystem", "agent", "sandbox"]
categories.workspace = true

[features]
default = ["sandbox"]
# Sandbox enforcement
sandbox = []

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }

# Path and file handling
camino = { version = "1.1", features = ["serde1"] }
ignore = "0.4"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
