[package]
name = "mistralrs-core"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[features]
pyo3_macros = ["pyo3", "mistralrs-mcp/pyo3_macros"]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "dep:bindgen_cuda",
    "mistralrs-quant/cuda",
    "dep:mistralrs-paged-attn",
    "mistralrs-paged-attn/cuda",
    "float8/cuda",
]
cudnn = ["candle-core/cudnn"]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "mistralrs-quant/metal",
    "dep:objc",
    "dep:mistralrs-paged-attn",
    "mistralrs-paged-attn/metal",
    "dep:metal",
]
flash-attn = ["cuda", "dep:candle-flash-attn"]
flash-attn-v3 = ["cuda", "dep:candle-flash-attn-v3"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "mistralrs-quant/accelerate",
]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
nccl = ["cuda", "mistralrs-quant/nccl"]
utoipa = ["dep:utoipa"]
ring = ["mistralrs-quant/ring"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = { workspace = true, optional = true }
objc = { workspace = true, optional = true }

[dependencies]
accelerate-src = { workspace = true, optional = true }
ahash.workspace = true
akin.workspace = true
anyhow.workspace = true
apodize.workspace = true
as-any.workspace = true
async-trait.workspace = true
base64.workspace = true
bm25.workspace = true
bytemuck.workspace = true
bytemuck_derive.workspace = true
candle-core.workspace = true
candle-flash-attn = { workspace = true, optional = true }
candle-flash-attn-v3 = { workspace = true, optional = true }
candle-nn.workspace = true
cfgrammar.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
derive-new.workspace = true
derive_more = { workspace = true }
dirs.workspace = true
either.workspace = true
float8.workspace = true
futures.workspace = true
galil-seiferas.workspace = true
half.workspace = true
hashbrown.workspace = true
hf-hub.workspace = true
hound.workspace = true
html2text.workspace = true
http.workspace = true
image.workspace = true
indexmap.workspace = true
indicatif.workspace = true
intel-mkl-src = { workspace = true, optional = true }
interprocess.workspace = true
itertools.workspace = true
libc.workspace = true
llguidance.workspace = true
lrtable.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
mistralrs-audio.workspace = true
mistralrs-mcp = { workspace = true, features = ["utoipa"] }
mistralrs-paged-attn = { workspace = true, optional = true }
mistralrs-quant.workspace = true
mistralrs-vision.workspace = true
num-traits.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
pyo3 = { workspace = true, optional = true }
radix_trie.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_isaac.workspace = true
rayon.workspace = true
regex.workspace = true
regex-automata.workspace = true
reqwest.workspace = true
rubato.workspace = true
rust-mcp-schema.workspace = true
rustc-hash.workspace = true
rustfft.workspace = true
safetensors.workspace = true
schemars.workspace = true
scraper.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
serde_yaml.workspace = true
statrs.workspace = true
strum.workspace = true
symphonia.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-rayon.workspace = true
tokio-tungstenite.workspace = true
toktrie_hf_tokenizers.workspace = true
toml.workspace = true
tqdm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
variantly.workspace = true
vob.workspace = true

[build-dependencies]
bindgen_cuda = { workspace = true, optional = true }
