[package]
name = "mistralrs-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) client for mistral.rs"
license.workspace = true
homepage.workspace = true
keywords = ["mcp", "model-context-protocol", "tools", "ai", "llm"]
categories = ["api-bindings", "development-tools"]
repository.workspace = true
readme = "README.md"

[features]
pyo3_macros = ["pyo3"]
utoipa = ["dep:utoipa"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
http.workspace = true
pyo3 = { workspace = true, optional = true }
regex = "1.11"
reqwest = { workspace = true, features = ["json", "stream"] }
rust-mcp-schema.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
url = "2.5"
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# New dependencies for connection pooling and reliability
deadpool = "0.12"
glob = "0.3"
lru = "0.12"
num_cpus = "1.16"
rand = "0.8"
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }
scopeguard = "1.2"
tungstenite = "0.24"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "performance_optimized"
harness = false
