[package]
name = "mistralrs-paged-attn"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[features]
cuda = ["dep:bindgen_cuda"]
metal = ["dep:metal"]

[dependencies]
candle-core.workspace = true
float8.workspace = true
half.workspace = true
metal = { workspace = true, optional = true }
once_cell.workspace = true
thiserror.workspace = true

[build-dependencies]
anyhow.workspace = true
bindgen_cuda = { workspace = true, optional = true }
