[package]
name = "mistralrs-pyo3"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "mistralrs"
crate-type = ["cdylib"]
doc = false

[features]
cuda = ["candle-core/cuda", "mistralrs-core/cuda"]
cudnn = ["candle-core/cudnn", "mistralrs-core/cudnn"]
metal = ["candle-core/metal", "mistralrs-core/metal"]
flash-attn = ["cuda", "mistralrs-core/flash-attn"]
accelerate = ["mistralrs-core/accelerate"]
mkl = ["mistralrs-core/mkl"]
nccl = ["mistralrs-core/nccl"]
ring = ["mistralrs-core/ring"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
anyhow.workspace = true
base64.workspace = true
candle-core.workspace = true
data-url.workspace = true
either.workspace = true
futures.workspace = true
image.workspace = true
indexmap.workspace = true
intel-mkl-src = { workspace = true, optional = true }
itertools.workspace = true
mistralrs-core = { workspace = true, features = ["pyo3_macros"] }
mistralrs-mcp = { workspace = true, features = ["pyo3_macros"] }
pyo3.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
