[package]
name = "mistralrs-server"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
default-run = "mistral-rs"

[features]
# GPU acceleration
cuda = ["mistralrs-core/cuda", "mistralrs-server-core/cuda"]
cudnn = ["mistralrs-core/cudnn", "mistralrs-server-core/cudnn"]
metal = ["mistralrs-core/metal", "mistralrs-server-core/metal"]
flash-attn = [
    "cuda",
    "mistralrs-core/flash-attn",
    "mistralrs-server-core/flash-attn",
]
acceleate = ["mistralrs-core/accelerate", "mistralrs-server-core/accelerate"]
mkl = ["mistralrs-core/mkl", "mistralrs-server-core/mkl"]
nccl = ["mistralrs-core/nccl", "mistralrs-server-core/nccl"]
ring = ["mistralrs-core/ring", "mistralrs-server-core/ring"]

# Agent mode features (opt-in)
pyo3-tools = ["mistralrs-core/pyo3_macros"]  # PyO3 filesystem bindings
tui-agent = []  # TUI agent mode with command interpreter
mcp = ["mcp-server"]  # MCP server/client support
mcp-server = ["rust-mcp-sdk/server", "rust-mcp-sdk/hyper-server"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["tokio"] }
clap.workspace = true
ctrlc.workspace = true
directories.workspace = true
either.workspace = true
indexmap.workspace = true
mistralrs-core.workspace = true
mistralrs-server-core.workspace = true
mistralrs-agent-tools = { path = "../mistralrs-agent-tools" }
once_cell.workspace = true
regex.workspace = true
rust-mcp-sdk.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
