[package]
name = "mistralrs-tui"
version = "0.6.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = ["terminal"]
terminal = ["ratatui/crossterm", "dep:crossterm"]
gpu = [
    "dep:wgpu",
    "dep:winit",
    "dep:pollster",
    "dep:raw-window-handle",
]
tui-agent = []

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { version = "0.28", optional = true }
directories = "5.0"
futures = { workspace = true }
indexmap = { workspace = true }
notify = "6.1"
once_cell = { workspace = true }
parking_lot = "0.12"
pollster = { version = "0.3", optional = true }
ratatui = { version = "0.28", default-features = false, features = ["macros"] }
raw-window-handle = { version = "0.6", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["macros", "runtime-tokio", "sqlite", "migrate"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml = { workspace = true }
walkdir = { workspace = true }
uuid = { version = "1", features = ["v4"] }
wgpu = { version = "0.19", optional = true, features = ["wgsl"] }
winit = { version = "0.29", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
