[package]
name = "mistralrs"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[features]
cuda = ["mistralrs-core/cuda"]
cudnn = ["mistralrs-core/cudnn"]
metal = ["mistralrs-core/metal"]
flash-attn = ["cuda", "mistralrs-core/flash-attn"]
accelerate = ["mistralrs-core/accelerate"]
mkl = ["mistralrs-core/mkl"]
nccl = ["mistralrs-core/nccl"]
ring = ["mistralrs-core/ring"]

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
clap.workspace = true
either.workspace = true
futures.workspace = true
image.workspace = true
indexmap.workspace = true
mistralrs-core.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
