[package]
name = "winutils-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["WinUtils Team <winutils@example.com>"]
description = "Performance benchmarking framework for WinUtils"
license = "MIT"

[[bin]]
name = "benchmark-runner"
path = "src/main.rs"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tempfile = "3.0"
which = "6.0"
sysinfo = "0.30"
crossbeam = "0.8"
rayon = "1.8"
humantime = "2.1"
indicatif = "0.17"
plotly = { version = "0.8", optional = true }
statrs = "0.16"

# Memory profiling dependencies
jemalloc-ctl = { version = "0.5", optional = true }
tikv-jemallocator = { version = "0.5", optional = true }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemInformation"
] }
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "memoryapi"] }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["memory-profiling", "visualization"]
memory-profiling = ["dep:jemalloc-ctl", "dep:tikv-jemallocator"]
visualization = ["dep:plotly"]
native-benchmarks = []

# Use jemalloc for better memory profiling
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true
[workspace]
