[package]
name = "where"
version = "1.0.0"
edition = "2021"
authors = ["Windows Utilities Team"]
description = "Windows-optimized PATH search utility"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
which = "6.0"
glob = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
