[package]
name = "ls"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows-optimized ls utility with native API integration"

[[bin]]
name = "ls"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
windows-sys.workspace = true
winapi-util.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
ahash.workspace = true
termcolor.workspace = true
winpath.workspace = true

# Additional dependencies for ls
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1.3"
unicode-width = "0.1"
libc = "0.2"
num_cpus = "1.16"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ls_benchmark"
harness = false

[features]
default = ["json", "parallel"]
json = []
parallel = []
debug = []
