[package]
name = "rg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Enhanced Windows wrapper for ripgrep with comprehensive path normalization"
keywords = ["ripgrep", "search", "windows", "path", "normalization"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rg"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
winpath.workspace = true

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
winapi-util.workspace = true

# Utilities
regex.workspace = true
shell-words.workspace = true
which.workspace = true
dirs.workspace = true

# Performance
memchr.workspace = true

# Path handling
dunce.workspace = true
path-slash.workspace = true

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["path-normalization", "windows-enhancements"]
path-normalization = []
windows-enhancements = []
debug-args = []
