[package]
name = "bash-wrapper"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Bash wrapper with winpath integration for Git Bash/WSL compatibility"
license = "MIT"
repository = "https://github.com/uutils/coreutils"
keywords = ["windows", "bash", "shell", "wrapper", "path"]
categories = ["command-line-utilities", "os::windows-apis"]

[[bin]]
name = "bash"
path = "src/main.rs"

[dependencies]
winpath = { path = "../../shared/winpath", features = ["std", "cache"] }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_Security",
] }
windows = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
which = "6.0"
shell-words = "1.1"

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

# NOTE: Build profiles are defined in the workspace root Cargo.toml at
# T:\projects\coreutils\winutils\derive-utils\Cargo.toml to eliminate duplication
# and ensure consistent build settings across all wrapper crates.

[package.metadata.winutils]
category = "derive"
description = "Enhanced bash wrapper with path normalization"
priority = "high"
