[package]
name = "fd-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Fast find replacement using fd with Windows path normalization"
keywords = ["find", "fd", "windows", "search", "file"]
categories = ["command-line-utilities", "filesystem"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossbeam-utils.workspace = true
env_logger.workspace = true
glob.workspace = true
ignore.workspace = true
log.workspace = true
num_cpus.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
walkdir.workspace = true
winpath = { path = "../../shared/winpath" }

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "fd"
path = "src/main.rs"

[lib]
name = "fd_wrapper"
path = "src/lib.rs"
